# copperbird

./: Cargo.toml
src/: lib.rs  main.rs
src/renderer/: buffer.rs  context.rs  mod.rs  pipeline.rs  texture.rs  uniforms.rs
src/renderer/shaders/: triangle.wgsl
src/windowing/: input.rs  mod.rs  window.rs
